Fix spacing on homepage

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -48,8 +48,7 @@
 }
 
 .homeBlocks {
-  margin-top: 2em;
-  padding: 2em 0;
+  padding: 2em 0 4em 0;
   background: #d0b88c;
 
   .circleIcon {
